syntax = "proto3";

package bacotell;

import "proto/discordgo_message.proto";

option go_package = "github.com/EliasStar/BacoTell/internal/proto/bacotellpb";

service InteractionProxy {
    rpc Defer(DeferRequest) returns (DeferResponse);
    rpc Respond(RespondRequest) returns (RespondResponse);
    rpc Followup(FollowupRequest) returns (FollowupResponse);
    rpc Edit(EditRequest) returns (EditResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message DeferRequest {
    bool ephemeral = 1;
}

message DeferResponse {}

message RespondRequest {
    Response message = 1;
    bool ephemeral = 2;
}

message RespondResponse {}

message FollowupRequest {
    Response message = 1;
    bool ephemeral = 2;
}

message FollowupResponse {
    string id = 1;
}

message EditRequest {
    string id = 1;
    Response message = 2;
}

message EditResponse {}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {}

message Response {
	string content = 1;
    bool suppress_embeds = 2;
    bool tts = 3;
    discordgo.MessageAllowedMentions allowed_mentions = 4;
    repeated discordgo.MessageComponent components = 5;
    repeated discordgo.MessageEmbed embeds = 6;
    repeated discordgo.File files = 7;
}
